# homework_web_8

project/: README.md  pyproject.toml
project/task_1/: models.py  queries.py  upload_data.py
project/task_2/: consumer.py  models_rabbit.py  producer.py
