[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "SWTxSerega-tech",email = "happycraft2468@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymongo[srv,tls] (>=4.17.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mongoengine (>=0.29.3,<0.30.0)",
    "pika (>=1.4.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
